

		CHANGES IN `party' VERSION 0.8-1 (2006-02-23)

    o    `testtype' can be Bonferroni, MonteCarlo, Univariate and
         Teststatistic (instead of Raw)		

    o    removed unnecessary constraint on weights in `cforest'

    o    maximize raw test statistics for random forest by default.


		CHANGES IN `party' VERSION 0.8-0 (2006-02-15)		


    o    `cforest', an implementation of Breiman's random forest ensemble
         algorithm based on conditional inference trees (`ctree') has been
	 added. It is somewhat experimental and thus for advanced users only.

    o    `mob', an object-oriented implementation of a recently suggested
         algorithm for model-based recursive partitioning (Zeileis, Hothorn,
	 Hornik, 2005) has been added. It works out of the box for partitioning
	 (generalized) linear regression models, others can be easily plugged
	 in. A new vignette "MOB" describes the implementation ideas and provides
	 a few examples.

    o    new S3 generic reweight() with methods for (g)linearModel
         for re-fitting a model with different weights.

    o    new argument `maxdepth' to `ctree_control' which allows for
         growing trees of a fixed maximum depth.

    o    LazyData: yes
    

		CHANGES IN `party' VERSION 0.3-6 (2006-02-06)


    o    use a different way to deal with NAMESPACEs during in tests/*.R
         following a suggestion by Prof. Brian D. Ripley

    o    use LazyLoad: yes instead of SaveImage: yes


		CHANGES IN `party' VERSION 0.3-5 (2006-02-02)


    o    make R CMD check happy and move src/README to inst/README


		CHANGES IN `party' VERSION 0.3-4 (2006-01-18)


    o    documentation updates


		CHANGES IN `party' VERSION 0.3-3 (2006-01-18)


    o    some new convenience functions, not exported


		CHANGES IN `party' VERSION 0.3-2 (2006-01-12)


    o    isequal must not check equality of attributes


		CHANGES IN `party' VERSION 0.3-1 (2005-12-02)

